force-app/main/default/objects/Project_Task__c/fields/Primary_Material__c.field-meta.xml
<CustomField>
    <fullName>Primary_Material__c</fullName>
    <label>Primary Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fabricated Foam</fullName>
            </value>
            <value>
                <fullName>Molded Foam</fullName>
            </value>
            <value>
                <fullName>Paper Corrugated</fullName>
            </value>
            <value>
                <fullName>Plastic Corrugated</fullName>
            </value>
            <value>
                <fullName>Folding Carton</fullName>
            </value>
            <value>
                <fullName>Bio-Pulp</fullName>
            </value>
            <value>
                <fullName>Bio-Polymer</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
            <value>
                <fullName>Cloth</fullName>
            </value>
            <value>
                <fullName>Hexacomb</fullName>
            </value>
            <value>
                <fullName>Thermoform</fullName>
            </value>
            <value>
                <fullName>Returnable</fullName>
            </value>
            <value>
                <fullName>Injection Molding</fullName>
            </value>
            <value>
                <fullName>Rack Systems</fullName>
            </value>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>